documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32VB.BAS

Public Declare Function C41_DataWrite Lib "C41W32.DLL" Alias "_C41_DataWrite@16" (ByVal value As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_Div Lib "C41W32.DLL" Alias "_C41_Div@8" (ByVal diva As Long, ByVal divb As Long) As Long
Public Declare Function C41_DPMIAllocSel Lib "C41W32.DLL" Alias "_C41_DPMIAllocSel@4" (ByVal segval As Integer) As Integer
Public Declare Function C41_DPMIDosAlloc Lib "C41W32.DLL" Alias "_C41_DPMIDosAlloc@4" (ByVal paras As Integer) As Long
Public Declare Function C41_DPMIDosFree Lib "C41W32.DLL" Alias "_C41_DPMIDosFree@4" (ByVal selector As Integer) As Integer
Public Declare Function C41_DPMIFreeSel Lib "C41W32.DLL" Alias "_C41_DPMIFreeSel@4" (ByVal selector As Integer) As Long
Public Declare Function C41_DPMIIntSim Lib "C41W32.DLL" Alias "_C41_DPMIIntSim@8" (ByVal intnum As Integer, ByRef dpmireg As Long) As Integer
Public Declare Function C41_DPMIPresent Lib "C41W32.DLL" Alias "_C41_DPMIPresent@0" () As Integer
Public Declare Function C41_DspIntmClear Lib "C41W32.DLL" Alias "_C41_DspIntmClear@4" (ByVal handleval As Long) As Long
Public Declare Function C41_DspIntmSet Lib "C41W32.DLL" Alias "_C41_DspIntmSet@4" (ByVal handleval As Long) As Long
Public Declare Function C41_DspXfClear Lib "C41W32.DLL" Alias "_C41_DspXfClear@4" (ByVal handleval As Long) As Long
Public Declare Function C41_DspXfSet Lib "C41W32.DLL" Alias "_C41_DspXfSet@4" (ByVal handleval As Long) As Long
Public Declare Function C41_ErrDesc Lib "C41W32.DLL" Alias "_C41_ErrDesc@4" (ByVal errval As Long) As Long
Public Declare Function C41_ErrDescStr Lib "C41W32.DLL" Alias "_C41_ErrDescStr@4" (ByVal errval As Long) As Long
Public Declare Function C41_ErrName Lib "C41W32.DLL" Alias "_C41_ErrName@4" (ByVal errval As Long) As Long
Public Declare Function C41_ExpandMant Lib "C41W32.DLL" Alias "_C41_ExpandMant@8" (ByRef mant As Long, ByRef exp As Long) As Long
Public Declare Function C41_ExtDinWr Lib "C41W32.DLL" Alias "_C41_ExtDinWr@12" (ByVal dinvalue As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FileClose Lib "C41W32.DLL" Alias "_C41_FileClose@4" (ByVal handle As Long) As Long
Public Declare Function C41_FileErr Lib "C41W32.DLL" Alias "_C41_FileErr@0" () As Long
Public Declare Function C41_FileErrClr Lib "C41W32.DLL" Alias "_C41_FileErrClr@0" () As Long
Public Declare Function C41_FileErrSet Lib "C41W32.DLL" Alias "_C41_FileErrSet@0" () As Long
Public Declare Function C41_FileOpenRead Lib "C41W32.DLL" Alias "_C41_FileOpenRead@4" (ByRef filename As String) As Long
Public Declare Function C41_FileOpenWrite Lib "C41W32.DLL" Alias "_C41_FileOpenWrite@4" (ByRef filename As String) As Long
Public Declare Function C41_FileRead Lib "C41W32.DLL" Alias "_C41_FileRead@12" (ByVal handle As Long, ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function C41_FileSeek Lib "C41W32.DLL" Alias "_C41_FileSeek@8" (ByVal handle As Long, ByVal offset As Long) As Long
Public Declare Function C41_FileTell Lib "C41W32.DLL" Alias "_C41_FileTell@4" (ByVal handle As Long) As Long
Public Declare Function C41_FileWrite Lib "C41W32.DLL" Alias "_C41_FileWrite@12" (ByVal handle As Long, ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function C41_FilterAddr Lib "C41W32.DLL" Alias "_C41_FilterAddr@16" (ByVal labelval As Long, ByVal sdival As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function C41_FilterClear Lib "C41W32.DLL" Alias "_C41_FilterClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FilterFill Lib "C41W32.DLL" Alias "_C41_FilterFill@12" (ByRef msgaddr As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FilterRd Lib "C41W32.DLL" Alias "_C41_FilterRd@20" (ByRef msgaddr As Integer, ByVal labelval As Long, ByVal sdival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FilterWipe Lib "C41W32.DLL" Alias "_C41_FilterWipe@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FilterWr Lib "C41W32.DLL" Alias "_C41_FilterWr@20" (ByRef msgaddr As Integer, ByVal labelval As Long, ByVal sdival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FldGetParBit Lib "C41W32.DLL" Alias "_C41_FldGetParBit@4" (ByVal msgval As Long) As Integer
Public Declare Function C41_GetHigh Lib "C41W32.DLL" Alias "_C41_GetHigh@4" (ByVal val As Long) As Integer
Public Declare Function C41_GetLow Lib "C41W32.DLL" Alias "_C41_GetLow@4" (ByVal val As Long) As Integer
Public Declare Function C41_GlobalRd Lib "C41W32.DLL" Alias "_C41_GlobalRd@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function C41_GlobalWr Lib "C41W32.DLL" Alias "_C41_GlobalWr@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_HandleAssign Lib "C41W32.DLL" Alias "_C41_HandleAssign@20" (ByVal sizval As Integer, ByVal memval As Integer, ByVal ioval As Integer, ByVal irqval As Integer, ByVal cardnum As Long) As Long
Public Declare Function C41_HandleClose Lib "C41W32.DLL" Alias "_C41_HandleClose@4" (ByVal handleval As Long) As Long
Public Declare Function C41_HandleDel Lib "C41W32.DLL" Alias "_C41_HandleDel@4" (ByVal handleval As Long) As Long
Public Declare Function C41_HandleGet Lib "C41W32.DLL" Alias "_C41_HandleGet@20" (ByRef sizval As Integer, ByRef memval As Integer, ByRef ioval As Integer, ByRef irqval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_HandleIns Lib "C41W32.DLL" Alias "_C41_HandleIns@24" (ByRef cardname As String, ByVal rcvcount As Long, ByVal xmtcount As Long, ByVal cardnum As Long, ByRef happwnd As Long, ByVal uiremovalmsg As Integer) As Long
Public Declare Function C41_HandleOkay Lib "C41W32.DLL" Alias "_C41_HandleOkay@4" (ByVal handleval As Long) As Integer
Public Declare Function C41_HandleOpen Lib "C41W32.DLL" Alias "_C41_HandleOpen@20" (ByRef cardname As String, ByVal rcvcount As Long, ByVal xmtcount As Long, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_HandleVer Lib "C41W32.DLL" Alias "_C41_HandleVer@4" (ByVal handleval As Long) As Long
Public Declare Function C41_HeapAlloc Lib "C41W32.DLL" Alias "_C41_HeapAlloc@8" (ByVal wordcount As Integer, ByVal handleval As Long) As Integer
Public Declare Function C41_HeapCheck Lib "C41W32.DLL" Alias "_C41_HeapCheck@4" (ByVal handleval As Long) As Long
Public Declare Function C41_HeapClear Lib "C41W32.DLL" Alias "_C41_HeapClear@4" (ByVal handleval As Long) As Long
Public Declare Function C41_HeapWipe Lib "C41W32.DLL" Alias "_C41_HeapWipe@4" (ByVal handleval As Long) As Long
Public Declare Function C41_InitFilt Lib "C41W32.DLL" Alias "_C41_InitFilt@12" (ByVal chanflag As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_InitHeap Lib "C41W32.DLL" Alias "_C41_InitHeap@8" (ByVal heapsize As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_InitInt Lib "C41W32.DLL" Alias "_C41_InitInt@8" (ByVal intsize As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_InitMsg Lib "C41W32.DLL" Alias "_C41_InitMsg@8" (ByVal msgcount As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_InitSch Lib "C41W32.DLL" Alias "_C41_InitSch@12" (ByVal chancount As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_InitSeq Lib "C41W32.DLL" Alias "_C41_InitSeq@8" (ByVal seqsize As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_IntClear Lib "C41W32.DLL" Alias "_C41_IntClear@4" (ByVal handleval As Long) As Long
Public Declare Function C41_INTDisable Lib "C41W32.DLL" Alias "_C41_INTDisable@4" (ByVal handleval As Long) As Long
Public Declare Function C41_INTEnable Lib "C41W32.DLL" Alias "_C41_INTEnable@4" (ByVal handleval As Long) As Long
Public Declare Function C41_INTEnableCond Lib "C41W32.DLL" Alias "_C41_INTEnableCond@4" (ByVal handleval As Long) As Long
Public Declare Function C41_IntInstall Lib "C41W32.DLL" Alias "_C41_IntInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function C41_IntUninstall Lib "C41W32.DLL" Alias "_C41_IntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function C41_IntWipe Lib "C41W32.DLL" Alias "_C41_IntWipe@4" (ByVal handleval As Long) As Long
Public Declare Function C41_Invoke Lib "C41W32.DLL" Alias "_C41_Invoke@4" (ByVal handleval As Long) As Long
Public Declare Function C41_Invokee Lib "C41W32.DLL" Alias "_C41_Invokee@4" (ByVal handleval As Long) As Long
Public Declare Function C41_KernEEPRdsW Lib "C41W32.DLL" Alias "_C41_KernEEPRdsW@16" (ByRef bufptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernEEPRdW Lib "C41W32.DLL" Alias "_C41_KernEEPRdW@12" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernEEPWrsW Lib "C41W32.DLL" Alias "_C41_KernEEPWrsW@16" (ByRef bufptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernEEPWrW Lib "C41W32.DLL" Alias "_C41_KernEEPWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernEnd Lib "C41W32.DLL" Alias "_C41_KernEnd@4" (ByRef vxdptr As Long) As Long
Public Declare Function C41_KernIntInstall Lib "C41W32.DLL" Alias "_C41_KernIntInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function C41_KernIntParam Lib "C41W32.DLL" Alias "_C41_KernIntParam@32" (ByVal clraddr As Long, ByVal clrwidth As Long, ByVal clrvalue As Long, ByVal stataddr As Long, ByVal statwidth As Long, ByVal statvalue As Long, ByVal statmask As Long, ByVal handleval As Long) As Long
Public Declare Function C41_KernIntUninstall Lib "C41W32.DLL" Alias "_C41_KernIntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function C41_KernIORdW Lib "C41W32.DLL" Alias "_C41_KernIORdW@12" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernIOWrW Lib "C41W32.DLL" Alias "_C41_KernIOWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernMEMFillW Lib "C41W32.DLL" Alias "_C41_KernMEMFillW@16" (ByVal value As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernMEMRdsW Lib "C41W32.DLL" Alias "_C41_KernMEMRdsW@16" (ByRef bufptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernMEMRdW Lib "C41W32.DLL" Alias "_C41_KernMEMRdW@12" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernMEMWrsW Lib "C41W32.DLL" Alias "_C41_KernMEMWrsW@16" (ByRef bufptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernMEMWrW Lib "C41W32.DLL" Alias "_C41_KernMEMWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_KernQuick Lib "C41W32.DLL" Alias "_C41_KernQuick@8" (ByVal flag As Long, ByVal handleval As Long) As Long
Public Declare Function C41_KernStatusEx Lib "C41W32.DLL" Alias "_C41_KernStatusEx@16" (ByRef valueptr As Long, ByVal typeval As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function C41_ListSetRcv Lib "C41W32.DLL" Alias "_C41_ListSetRcv@12" (ByVal listaddr As Integer, ByVal msgnum As Long, ByVal handleval As Long) As Integer
